--- a/media/BUILD.gn
+++ b/media/BUILD.gn
@@ -291,6 +291,8 @@ rtc_library("rtc_audio_video") {
     "../api/task_queue",
     "../api/transport:bitrate_settings",
     "../api/transport:datagram_transport_interface",
+    "../api/transport:field_trial_based_config",
+    "../api/transport:webrtc_key_value_config",
     "../api/transport/media:media_transport_interface",
     "../api/transport/rtp:rtp_source",
     "../api/units:data_rate",
@@ -327,7 +329,6 @@ rtc_library("rtc_audio_video") {
     "../rtc_base/system:rtc_export",
     "../rtc_base/third_party/base64",
     "../system_wrappers",
-    "../system_wrappers:field_trial",
     "../system_wrappers:metrics",
     "//third_party/abseil-cpp/absl/algorithm:container",
     "//third_party/abseil-cpp/absl/strings",
@@ -454,6 +455,7 @@ if (rtc_include_tests) {
       "../api:call_api",
       "../api:fec_controller_api",
       "../api:scoped_refptr",
+      "../api/transport:field_trial_based_config",
       "../api/video:encoded_image",
       "../api/video:video_bitrate_allocation",
       "../api/video:video_frame",
