--- a/api/BUILD.gn
+++ b/api/BUILD.gn
@@ -472,6 +472,21 @@ rtc_library("create_frame_generator") {
   ]
 }
 
+rtc_library("create_peerconnection_quality_test_frame_generator") {
+  visibility = [ "*" ]
+  testonly = true
+  sources = [
+    "test/create_peerconnection_quality_test_frame_generator.cc",
+    "test/create_peerconnection_quality_test_frame_generator.h",
+  ]
+  deps = [
+    ":create_frame_generator",
+    ":frame_generator_api",
+    ":peer_connection_quality_test_fixture_api",
+    "//third_party/abseil-cpp/absl/types:optional",
+  ]
+}
+
 rtc_source_set("libjingle_logging_api") {
   visibility = [ "*" ]
   sources = [ "rtc_event_log_output.h" ]
