--- a/video/adaptation/BUILD.gn
+++ b/video/adaptation/BUILD.gn
@@ -35,6 +35,7 @@ rtc_library("video_adaptation") {
     "../../rtc_base:rtc_base_approved",
     "../../rtc_base:rtc_event",
     "../../rtc_base:rtc_numerics",
+    "../../rtc_base:rtc_task_queue",
     "../../rtc_base:timeutils",
     "../../rtc_base/experiments:balanced_degradation_settings",
     "../../rtc_base/experiments:field_trial_parser",
