--- a/modules/video_coding/codecs/av1/BUILD.gn
+++ b/modules/video_coding/codecs/av1/BUILD.gn
@@ -68,10 +68,17 @@ rtc_library("video_coding_codecs_av1_tests") {
   testonly = true
 
   if (enable_libaom) {
-    sources = [ "libaom_av1_encoder_unittest.cc" ]
+    sources = [
+      "libaom_av1_encoder_unittest.cc",
+      "libaom_av1_unittest.cc",
+    ]
     deps = [
+      ":libaom_av1_decoder",
       ":libaom_av1_encoder",
       "../..:video_codec_interface",
+      "../../../../api:create_frame_generator",
+      "../../../../api:frame_generator_api",
+      "../../../../api:mock_video_encoder",
       "../../../../api/video_codecs:video_codecs_api",
       "../../../../test:test_support",
     ]
