--- a/modules/video_coding/codecs/av1/BUILD.gn
+++ b/modules/video_coding/codecs/av1/BUILD.gn
@@ -36,6 +36,18 @@ rtc_library("libaom_av1_decoder") {
   }
 }
 
+rtc_source_set("frame_dependencies_controller") {
+  sources = [
+    "frame_dependencies_controller.h",
+    "frame_dependencies_controller_no_layering.cc",
+    "frame_dependencies_controller_no_layering.h",
+  ]
+  deps = [
+    "../../../../api/transport/rtp:dependency_descriptor",
+    "../../../../common_video/generic_frame_descriptor",
+  ]
+}
+
 rtc_library("libaom_av1_encoder") {
   visibility = [ "*" ]
   poisonous = [ "software_video_codecs" ]
@@ -48,6 +60,7 @@ rtc_library("libaom_av1_encoder") {
   if (enable_libaom) {
     sources = [ "libaom_av1_encoder.cc" ]
     deps += [
+      ":frame_dependencies_controller",
       "../..:video_codec_interface",
       "../../../../api:scoped_refptr",
       "../../../../api/video:encoded_image",
@@ -72,6 +85,7 @@ rtc_library("video_coding_codecs_av1_tests") {
     deps = [
       ":libaom_av1_encoder",
       "../..:video_codec_interface",
+      "../../../../api:mock_video_encoder",
       "../../../../api/video_codecs:video_codecs_api",
       "../../../../test:test_support",
     ]
