--- a/modules/audio_processing/aec_dump/BUILD.gn
+++ b/modules/audio_processing/aec_dump/BUILD.gn
@@ -8,12 +8,26 @@
 
 import("../../../webrtc.gni")  # This contains def of 'rtc_enable_protobuf'
 
+rtc_source_set("aec_dump_interface") {
+  visibility = [ "*" ]
+  sources = [
+    "aec_dump.cc",
+    "aec_dump.h",
+  ]
+
+  deps = [
+    "..:api",
+    "..:audio_frame_view",
+    "../../../rtc_base:deprecation",
+  ]
+}
+
 rtc_source_set("aec_dump") {
   visibility = [ "*" ]
   sources = [ "aec_dump_factory.h" ]
 
   deps = [
-    "../",
+    ":aec_dump_interface",
     "../../../rtc_base:rtc_base_approved",
     "../../../rtc_base/system:file_wrapper",
     "../../../rtc_base/system:rtc_export",
@@ -29,6 +43,7 @@ if (rtc_include_tests) {
     ]
 
     deps = [
+      ":aec_dump_interface",
       "..:audioproc_test_utils",
       "../",
       "../../../test:test_support",
@@ -64,7 +79,7 @@ if (rtc_enable_protobuf) {
 
     deps = [
       ":aec_dump",
-      "../",
+      ":aec_dump_interface",
       "../../../api/audio:audio_frame_api",
       "../../../api/task_queue",
       "../../../rtc_base:checks",
@@ -104,6 +119,6 @@ rtc_library("null_aec_dump_factory") {
 
   deps = [
     ":aec_dump",
-    "../",
+    ":aec_dump_interface",
   ]
 }
