--- a/modules/video_coding/codecs/av1/BUILD.gn
+++ b/modules/video_coding/codecs/av1/BUILD.gn
@@ -9,6 +9,50 @@
 import("//third_party/libaom/options.gni")
 import("../../../../webrtc.gni")
 
+rtc_library("encoder_manager") {
+  sources = [
+    "encoder_manager.cc",
+    "encoder_manager.h",
+  ]
+  deps = [
+    ":frame_dependencies_controller",
+    ":libaom_av1_encoder",
+    "../..:video_codec_interface",
+    "../../../../api:scoped_refptr",
+    "../../../../api/transport/rtp:dependency_descriptor",
+    "../../../../api/video:encoded_image",
+    "../../../../api/video:video_frame",
+    "../../../../api/video:video_frame_i420",
+    "../../../../api/video_codecs:video_codecs_api",
+    "../../../../common_video",
+    "../../../../common_video/generic_frame_descriptor",
+    "../../../../rtc_base:checks",
+    "../../../../rtc_base:logging",
+    "//third_party/abseil-cpp/absl/algorithm:container",
+  ]
+}
+
+rtc_library("frame_dependencies_controller") {
+  sources = [
+    #TODO(danilchap): Keep interface and it's implementations in separate libraries.
+    "frame_dependencies_controller.h",
+    "frame_dependencies_controller_full_svc.cc",
+    "frame_dependencies_controller_full_svc.h",
+    "frame_dependencies_controller_single_stream.cc",
+    "frame_dependencies_controller_single_stream.h",
+    "video_encoder_light.h",
+  ]
+  deps = [
+    "../../../../api/transport/rtp:dependency_descriptor",
+    "../../../../api/video:video_frame",
+    "../../../../api/video:video_frame_type",
+    "../../../../common_video/generic_frame_descriptor",
+    "../../../../rtc_base:checks",
+    "//third_party/abseil-cpp/absl/base:core_headers",
+    "//third_party/abseil-cpp/absl/types:optional",
+  ]
+}
+
 rtc_library("libaom_av1_decoder") {
   visibility = [ "*" ]
   poisonous = [ "software_video_codecs" ]
@@ -41,6 +85,7 @@ rtc_library("libaom_av1_encoder") {
   poisonous = [ "software_video_codecs" ]
   public = [ "libaom_av1_encoder.h" ]
   deps = [
+    ":frame_dependencies_controller",
     "../../../../api/video_codecs:video_codecs_api",
     "//third_party/abseil-cpp/absl/base:core_headers",
   ]
@@ -74,11 +119,14 @@ if (rtc_include_tests) {
         "libaom_av1_unittest.cc",
       ]
       deps = [
+        ":encoder_manager",
+        ":frame_dependencies_controller",
         ":libaom_av1_decoder",
         ":libaom_av1_encoder",
         "../..:video_codec_interface",
         "../../../../api:create_frame_generator",
         "../../../../api:frame_generator_api",
+        "../../../../api:mock_video_decoder",
         "../../../../api/video_codecs:video_codecs_api",
         "../../../../test:test_support",
         "//third_party/abseil-cpp/absl/types:optional",
