--- a/call/adaptation/BUILD.gn
+++ b/call/adaptation/BUILD.gn
@@ -36,7 +36,9 @@ rtc_library("resource_adaptation") {
     "../../modules/video_coding:video_coding_utility",
     "../../rtc_base:checks",
     "../../rtc_base:rtc_base_approved",
+    "../../rtc_base:rtc_task_queue",
     "../../rtc_base/experiments:balanced_degradation_settings",
+    "../../rtc_base/synchronization:sequence_checker",
     "//third_party/abseil-cpp/absl/algorithm:container",
     "//third_party/abseil-cpp/absl/types:optional",
   ]
@@ -56,10 +58,13 @@ if (rtc_include_tests) {
     deps = [
       ":resource_adaptation",
       ":resource_adaptation_test_utilities",
+      "../../api/task_queue:default_task_queue_factory",
+      "../../api/task_queue:task_queue",
       "../../api/video:video_adaptation",
       "../../api/video_codecs:video_codecs_api",
       "../../rtc_base:checks",
       "../../rtc_base:rtc_base_approved",
+      "../../rtc_base:rtc_task_queue",
       "../../test:field_trial",
       "../../test:rtc_expect_death",
       "../../test:test_support",
