--- a/call/adaptation/BUILD.gn
+++ b/call/adaptation/BUILD.gn
@@ -60,10 +60,13 @@ if (rtc_include_tests) {
       ":resource_adaptation",
       ":resource_adaptation_test_utilities",
       "../../api:scoped_refptr",
+      "../../api/task_queue:default_task_queue_factory",
+      "../../api/task_queue:task_queue",
       "../../api/video:video_adaptation",
       "../../api/video_codecs:video_codecs_api",
       "../../rtc_base:checks",
       "../../rtc_base:rtc_base_approved",
+      "../../rtc_base:rtc_task_queue",
       "../../test:field_trial",
       "../../test:rtc_expect_death",
       "../../test:test_support",
