--- a/video/adaptation/BUILD.gn
+++ b/video/adaptation/BUILD.gn
@@ -38,6 +38,7 @@ rtc_library("video_adaptation") {
     "../../rtc_base:rtc_numerics",
     "../../rtc_base:rtc_task_queue",
     "../../rtc_base:timeutils",
+    "../../rtc_base:weak_ptr",
     "../../rtc_base/experiments:balanced_degradation_settings",
     "../../rtc_base/experiments:field_trial_parser",
     "../../rtc_base/experiments:quality_rampup_experiment",
