Move CallStats and RtpStreamsSynchronizer over to using Timestamp.
Bug: none
Change-Id: Id02eb058c460dc479232c243134707030bf8ffa3

--- a/pc/BUILD.gn
+++ b/pc/BUILD.gn
@@ -601,6 +601,7 @@ if (rtc_include_tests) {
       "../test:field_trial",
       "../test:fileutils",
       "../test:rtp_test_utils",
+      "../test:test_common",
       "./scenario_tests:pc_scenario_tests",
       "//third_party/abseil-cpp/absl/algorithm:container",
       "//third_party/abseil-cpp/absl/memory",
