Move CallStats and RtpStreamsSynchronizer over to using Timestamp.
Bug: none
Change-Id: Id02eb058c460dc479232c243134707030bf8ffa3

--- a/media/BUILD.gn
+++ b/media/BUILD.gn
@@ -591,6 +591,7 @@ if (rtc_include_tests) {
       "../test:fake_video_codecs",
       "../test:field_trial",
       "../test:rtp_test_utils",
+      "../test:test_common",
       "../test:test_main",
       "../test:test_support",
       "../test:video_test_common",
