--- a/rtc_base/task_utils/BUILD.gn
+++ b/rtc_base/task_utils/BUILD.gn
@@ -58,6 +58,7 @@ rtc_library("slacked_task_queue_factory") {
     "../../api/units:timestamp",
     "../../rtc_base:checks",
     "../../rtc_base:logging",
+    "../../rtc_base:macromagic",
     "../../rtc_base:refcount",
     "../../rtc_base:rtc_event",
     "../../rtc_base/synchronization:mutex",
@@ -65,6 +66,7 @@ rtc_library("slacked_task_queue_factory") {
     "../../system_wrappers",
   ]
   absl_deps = [ "//third_party/abseil-cpp/absl/types:optional" ]
+  frameworks = [ "CoreVideo.framework" ]
 }
 
 rtc_source_set("to_queued_task") {
