Introduce new pools/perf realm.
Follow-up to https://chrome-internal-review.googlesource.com/c/infradata/config/+/4086549.

Bug: None
Change-Id: Ice44581c79a062d8fb80dff00c21619c68911966

--- a/realms.cfg
+++ b/realms.cfg
@@ -81,10 +81,6 @@ realms {
     role: "role/buildbucket.triggerer"
     principals: "user:webrtc-ci-builder@chops-service-accounts.iam.gserviceaccount.com"
   }
-  bindings {
-    role: "role/swarming.poolUser"
-    principals: "group:project-webrtc-led-users"
-  }
 }
 realms {
   name: "pools/ci"
@@ -105,6 +101,13 @@ realms {
   bindings {
     role: "role/swarming.poolUser"
     principals: "project:libyuv"
+  }
+}
+realms {
+  name: "pools/perf"
+  bindings {
+    role: "role/swarming.taskTriggerer"
+    principals: "group:project-webrtc-led-users"
   }
 }
 realms {
