AGC2 spectral features clean-up
- fully precompute the DCT table including its scaling factor
- move the DCT table computation code to a disabled unit test
  to be used if we ever change `kNumBands`
- minor code style changes

Bug: webrtc:7494
Change-Id: Icd33b2a43b9c29e3563b9d83e35014b9acda4e97

--- a/modules/audio_processing/agc2/rnn_vad/BUILD.gn
+++ b/modules/audio_processing/agc2/rnn_vad/BUILD.gn
@@ -199,6 +199,7 @@ rtc_library("rnn_vad_spectral_features") {
     ":rnn_vad_symmetric_matrix_buffer",
     "../../../../api:array_view",
     "../../../../rtc_base:checks",
+    "../../../../rtc_base:macromagic",
     "../../../../rtc_base:safe_compare",
     "../../utility:pffft_wrapper",
   ]
