--- a/webrtc.gni
+++ b/webrtc.gni
@@ -130,7 +130,8 @@ declare_args() {
   # By default it's only enabled on desktop Linux (excludes ChromeOS) and
   # only when using the sysroot as PipeWire is not available in older and
   # supported Ubuntu and Debian distributions.
-  rtc_use_pipewire = is_linux && use_sysroot
+  # TODO: remove !is_msan (https://bugs.chromium.org/p/webrtc/issues/detail?id=13137)
+  rtc_use_pipewire = is_linux && use_sysroot && !is_msan
 
   # Set this to link PipeWire directly instead of using the dlopen.
   rtc_link_pipewire = false
