--- a/test/network/BUILD.gn
+++ b/test/network/BUILD.gn
@@ -54,6 +54,7 @@ rtc_library("emulated_network") {
     "../../api/units:timestamp",
     "../../call:simulated_network",
     "../../p2p:p2p_server_utils",
+    "../../p2p:rtc_p2p",
     "../../rtc_base",
     "../../rtc_base:ip_address",
     "../../rtc_base:network_constants",
@@ -121,6 +122,7 @@ if (rtc_include_tests && !build_with_chromium) {
       "../../rtc_base",
       "../../rtc_base:gunit_helpers",
       "../../rtc_base:logging",
+      "../../rtc_base:null_socket_server",
       "../../rtc_base:rtc_event",
     ]
   }
