dcsctp: Use WebRTC types in RetransmissionTimeout
Bug: webrtc:TODO
Change-Id: I4c55809f5689da7325ac0f5394207e8305d1c10e

--- a/net/dcsctp/tx/BUILD.gn
+++ b/net/dcsctp/tx/BUILD.gn
@@ -57,6 +57,7 @@ rtc_library("retransmission_error_counter") {
 
 rtc_library("retransmission_timeout") {
   deps = [
+    "../../../api/units:time_delta",
     "../../../rtc_base:checks",
     "../../../rtc_base:rtc_base_approved",
     "../public:types",
@@ -116,6 +117,7 @@ if (rtc_include_tests) {
       ":rr_send_queue",
       ":send_queue",
       "../../../api:array_view",
+      "../../../api/units:time_delta",
       "../../../rtc_base:checks",
       "../../../rtc_base:gunit_helpers",
       "../../../rtc_base:rtc_base_approved",
