--- a/api/BUILD.gn
+++ b/api/BUILD.gn
@@ -134,19 +134,64 @@ rtc_library("media_stream_interface") {
   ]
 }
 
+rtc_library("candidate") {
+  sources = [
+    "candidate.cc",
+    "candidate.h",
+  ]
+  deps = [
+    "../rtc_base",
+    "../rtc_base:checks",
+    "../rtc_base:ip_address",
+    "../rtc_base:logging",
+    "../rtc_base:network_constants",
+    "../rtc_base:socket_address",
+    "../rtc_base:stringutils",
+    "../rtc_base/system:rtc_export",
+  ]
+  absl_deps = [ "//third_party/abseil-cpp/absl/strings" ]
+}
+
+rtc_source_set("turn_customizer") {
+  sources = [ "turn_customizer.h" ]
+}
+
+rtc_source_set("ice_transport_interface") {
+  sources = [ "ice_transport_interface.h" ]
+  deps = [
+    ":async_dns_resolver",
+    ":packet_socket_factory",
+    ":rtc_error",
+    ":scoped_refptr",
+    "../rtc_base:refcount",
+    "rtc_event_log:rtc_event_log",
+  ]
+}
+
+rtc_library("dtls_transport_interface") {
+  sources = [
+    "dtls_transport_interface.cc",
+    "dtls_transport_interface.h",
+  ]
+  deps = [
+    ":ice_transport_interface",
+    ":rtc_error",
+    ":scoped_refptr",
+    "../rtc_base",
+    "../rtc_base:refcount",
+    "../rtc_base/system:rtc_export",
+  ]
+  absl_deps = [ "//third_party/abseil-cpp/absl/types:optional" ]
+}
+
 rtc_library("libjingle_peerconnection_api") {
   visibility = [ "*" ]
   cflags = []
   sources = [
-    "candidate.cc",
-    "candidate.h",
     "crypto_params.h",
     "data_channel_interface.cc",
     "data_channel_interface.h",
-    "dtls_transport_interface.cc",
-    "dtls_transport_interface.h",
     "dtmf_sender_interface.h",
-    "ice_transport_interface.h",
     "jsep.cc",
     "jsep.h",
     "jsep_ice_candidate.cc",
@@ -166,7 +211,6 @@ rtc_library("libjingle_peerconnection_api") {
     "set_remote_description_observer_interface.h",
     "stats_types.cc",
     "stats_types.h",
-    "turn_customizer.h",
     "uma_metrics.h",
     "video_track_source_proxy_factory.h",
   ]
@@ -175,10 +219,13 @@ rtc_library("libjingle_peerconnection_api") {
     ":async_dns_resolver",
     ":audio_options_api",
     ":callfactory_api",
+    ":candidate",
+    ":dtls_transport_interface",
     ":fec_controller_api",
     ":field_trials",
     ":field_trials_view",
     ":frame_transformer_interface",
+    ":ice_transport_interface",
     ":libjingle_logging_api",
     ":make_ref_counted",
     ":media_stream_interface",
@@ -192,7 +239,9 @@ rtc_library("libjingle_peerconnection_api") {
     ":rtp_transceiver_direction",
     ":scoped_refptr",
     ":sequence_checker",
+    ":turn_customizer",
     "../call:rtp_interfaces",
+    "../p2p:rtc_p2p",
     "../rtc_base:copy_on_write_buffer",
     "../rtc_base:logging",
     "../rtc_base:network_constants",
@@ -776,6 +825,7 @@ rtc_library("ice_transport_factory") {
     "ice_transport_factory.h",
   ]
   deps = [
+    ":ice_transport_interface",
     ":libjingle_peerconnection_api",
     ":make_ref_counted",
     ":packet_socket_factory",
