Improve FrameDelayDeltaKalmanFilter interface.
Bug: webrtc:14151
Change-Id: I01e60d4b783cabad3ccbdc711c5d746666dd16ca

--- a/modules/video_coding/timing/BUILD.gn
+++ b/modules/video_coding/timing/BUILD.gn
@@ -59,6 +59,7 @@ rtc_library("jitter_estimator") {
     "../../../api/units:time_delta",
     "../../../api/units:timestamp",
     "../../../rtc_base",
+    "../../../rtc_base:checks",
     "../../../rtc_base:safe_conversions",
     "../../../rtc_base/experiments:jitter_upper_bound_experiment",
     "../../../system_wrappers",
