Delete rtc::Thread::socketserver() accessor
Bug: webrtc:13145
Change-Id: Ie3646d2f6efe6199952e9161445f5cb56005df22

--- a/test/pc/e2e/BUILD.gn
+++ b/test/pc/e2e/BUILD.gn
@@ -403,6 +403,7 @@ if (!build_with_chromium) {
         "../../../api/task_queue",
         "../../../api/units:time_delta",
         "../../../api/units:timestamp",
+        "../../../p2p:rtc_p2p",
         "../../../pc:pc_test_utils",
         "../../../pc:sdp_utils",
         "../../../rtc_base",
