--- a/pc/BUILD.gn
+++ b/pc/BUILD.gn
@@ -2097,6 +2097,7 @@ if (rtc_include_tests && !build_with_chromium) {
       "../rtc_base:location",
       "../rtc_base:logging",
       "../rtc_base:macromagic",
+      "../rtc_base:null_socket_server",
       "../rtc_base:rtc_base_tests_utils",
       "../rtc_base:socket_address",
       "../rtc_base:stringutils",
