--- a/modules/congestion_controller/BUILD.gn
+++ b/modules/congestion_controller/BUILD.gn
@@ -35,6 +35,7 @@ rtc_library("congestion_controller") {
     "../../api/units:timestamp",
     "../../rtc_base:logging",
     "../../rtc_base/synchronization:mutex",
+    "../../system_wrappers",
     "../pacing",
     "../remote_bitrate_estimator",
     "../rtp_rtcp:rtp_rtcp_format",
