Track down proxies
Bug: none
Change-Id: I14948ec7072577bf3a6131c103c043a2234aa387

--- a/pc/BUILD.gn
+++ b/pc/BUILD.gn
@@ -1585,6 +1585,7 @@ rtc_library("rtp_transceiver") {
     "../rtc_base:logging",
     "../rtc_base:macromagic",
     "../rtc_base:threading",
+    "../rtc_base/synchronization:yield_policy",
     "../rtc_base/third_party/sigslot",
   ]
   absl_deps = [
@@ -1717,6 +1718,7 @@ rtc_library("audio_rtp_receiver") {
     "../rtc_base:location",
     "../rtc_base:macromagic",
     "../rtc_base:threading",
+    "../rtc_base/synchronization:yield_policy",
     "../rtc_base/system:no_unique_address",
   ]
   absl_deps = [
@@ -1757,6 +1759,7 @@ rtc_library("video_rtp_receiver") {
     "../rtc_base:logging",
     "../rtc_base:macromagic",
     "../rtc_base:threading",
+    "../rtc_base/synchronization:yield_policy",
     "../rtc_base/system:no_unique_address",
   ]
   absl_deps = [
