Extend DesktopCapture interface to support recurrent mode
Recurrent mode is an alternative way of capturing frames in which
the capturer pushes frames once they are available. This is in
contrast to the exisiting way of capturing frames where the capturer
only captures frames sequentially on request.

Recurrent mode is better aligned with many of the new OS specific
capturing APIs such as ScreenCaptureKit on macOS.

Bug: chromium:1471931
Change-Id: I161d59eccc0b043fac6e1f6e3cbc905633d7cc13

--- a/modules/desktop_capture/BUILD.gn
+++ b/modules/desktop_capture/BUILD.gn
@@ -425,6 +425,7 @@ rtc_library("desktop_capture") {
     "../../api:refcountedbase",
     "../../api:scoped_refptr",
     "../../api:sequence_checker",
+    "../../api/units:frequency",
     "../../rtc_base:checks",
     "../../rtc_base:event_tracer",
     "../../rtc_base:logging",
@@ -646,6 +647,7 @@ if (is_mac) {
       "../../api:refcountedbase",
       "../../api:scoped_refptr",
       "../../api:sequence_checker",
+      "../../api/units:frequency",
       "../../rtc_base:checks",
       "../../rtc_base:event_tracer",
       "../../rtc_base:logging",
