Add FunctionView to SSLStreamAdapter::Create
Bug: none
Change-Id: I9768e2e31529945620bdd8d0d285042bb2388b7b

--- a/rtc_base/BUILD.gn
+++ b/rtc_base/BUILD.gn
@@ -1531,6 +1531,7 @@ rtc_library("ssl") {
     ":threading",
     ":timeutils",
     "../api:array_view",
+    "../api:function_view",
     "../api:refcountedbase",
     "../api:scoped_refptr",
     "../api/task_queue:pending_task_safety_flag",
