Remove sigslot from StreamInterface
Bug: webrtc:11943
Change-Id: If936d6e1e23e8a584f06feb123ecf2d450ea4145

--- a/rtc_base/BUILD.gn
+++ b/rtc_base/BUILD.gn
@@ -1460,9 +1460,13 @@ rtc_library("stream") {
     ":checks",
     ":threading",
     "../api:array_view",
+    "../api:sequence_checker",
+    "system:no_unique_address",
     "system:rtc_export",
     "third_party/sigslot",
   ]
+
+  absl_deps = [ "//third_party/abseil-cpp/absl/functional:any_invocable" ]
 }
 
 rtc_library("rtc_certificate_generator") {
