--- a/rtc_base/BUILD.gn
+++ b/rtc_base/BUILD.gn
@@ -1487,6 +1487,14 @@ rtc_library("rtc_certificate_generator") {
   ]
 }
 
+rtc_source_set("ssl_header") {
+  public_deps = [ ":ssl" ]  # no-presubmit-check TODO(webrtc:8603)
+}
+
+rtc_source_set("digest") {
+  public_deps = [ ":ssl" ]  # no-presubmit-check TODO(webrtc:8603)
+}
+
 rtc_library("ssl") {
   visibility = [ "*" ]
   sources = [
@@ -1494,7 +1502,6 @@ rtc_library("ssl") {
     "helpers.h",
     "message_digest.cc",
     "message_digest.h",
-    "openssl.h",
     "openssl_adapter.cc",
     "openssl_adapter.h",
     "openssl_digest.cc",
@@ -1689,6 +1696,7 @@ rtc_library("rtc_base_tests_utils") {
     ":buffer",
     ":byte_buffer",
     ":checks",
+    ":digest",
     ":ip_address",
     ":logging",
     ":macromagic",
@@ -2071,6 +2079,7 @@ if (rtc_include_tests) {
         ":checks",
         ":crc32",
         ":data_rate_limiter",
+        ":digest",
         ":gunit_helpers",
         ":ifaddrs_converter",
         ":ip_address",
@@ -2093,6 +2102,7 @@ if (rtc_include_tests) {
         ":socket_factory",
         ":socket_server",
         ":ssl",
+        ":ssl_header",
         ":stream",
         ":stringutils",
         ":testclient",
