Allow heterogeneous lookup in CodecParameterMap
To avoid convertion to std::string for those lookups

Bug: None
Change-Id: Ib49ae205036f98268edbd5f83045635d32115731

--- a/sdk/android/BUILD.gn
+++ b/sdk/android/BUILD.gn
@@ -663,6 +663,7 @@ if (current_os == "linux" || is_android) {
       ":videoframe_jni",
       "../../api:libjingle_peerconnection_api",
       "../../api:media_stream_interface",
+      "../../api:rtp_parameters",
       "../../api:sequence_checker",
       "../../api/environment",
       "../../api/task_queue",
@@ -953,6 +954,7 @@ if (current_os == "linux" || is_android) {
       ":generated_external_classes_jni",
       ":generated_native_api_jni",
       ":internal_jni",
+      "../../api:function_view",
       "../../api:sequence_checker",
       "//api:array_view",
       "//rtc_base:checks",
