Fix GN template webrtc_fuzzer_test to work with Abseil targets in deps
Bug: webrtc:341803749
Change-Id: I450a19f87fa08c811579a75b20ac177a481b8162

--- a/test/fuzzers/BUILD.gn
+++ b/test/fuzzers/BUILD.gn
@@ -63,10 +63,15 @@ template("webrtc_fuzzer_test") {
       if (!defined(deps)) {
         deps = []
       }
-      if (build_with_chromium) {
+    }
+
+    if (build_with_chromium) {
+      absl_dependencies = filter_labels_include(deps, ["//third_party/abseil-cpp/*"])
+      if (absl_dependencies != []) {
+        filtered_deps = filter_labels_exclude(deps, ["//third_party/abseil-cpp/*"])
+        deps = []
+        deps = filtered_deps
         deps += [ "//third_party/abseil-cpp:absl" ]
-      } else {
-        deps += absl_deps
       }
     }
 
