--- a/api/BUILD.gn
+++ b/api/BUILD.gn
@@ -400,6 +400,7 @@ rtc_source_set("frame_transformer_interface") {
   deps = [
     ":make_ref_counted",
     ":ref_count",
+    ":rtp_parameters",
     ":scoped_refptr",
     "video:encoded_frame",
     "video:video_frame_metadata",
