Thread-annotate JsepCandidateCollection
This class is not thread-safe, so it's appropriate to have it
accessed on a single thread.

Bug: webrtc:342607573
Change-Id: I9e0c8953bd3e4b1621d73c743627745175e40f91

--- a/api/BUILD.gn
+++ b/api/BUILD.gn
@@ -342,6 +342,7 @@ rtc_library("libjingle_peerconnection_api") {
     "../pc:media_factory",
     "../rtc_base:copy_on_write_buffer",
     "../rtc_base:logging",
+    "../rtc_base:macromagic",
     "../rtc_base:network",
     "../rtc_base:network_constants",
     "../rtc_base:rtc_certificate_generator",
